added teachers template

--- a/web/teacher/common.xhtml
+++ b/web/teacher/common.xhtml
@@ -36,9 +36,9 @@
             <a class="text-blue-800 text-2xl underline block" href="home.xhtml">Home</a>
             <a class="text-blue-800 text-2xl block" href="announcement.xhtml">Announcements</a>
             <a class="text-blue-800 text-2xl block" href="inbox.xhtml">Messages</a>
-            <a class="text-blue-800 text-2xl block">Grades</a>
-            <a class="text-blue-800 text-2xl block">Quizzes</a>
-            <a class="text-blue-800 text-2xl block">Online Lesson</a>
+            <a class="text-blue-800 text-2xl block" href="grades.xhtml">Grades</a>
+            <a class="text-blue-800 text-2xl block" href="people.xhtml">People</a>
+            <a class="text-blue-800 text-2xl block" href="quizzes.xhtml">Quizzes</a>
         </div>
     </div>
 
