--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -1,18 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
-    >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+    xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
     <title>BetterCanvas - New Account</title>
     <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
     <link href="../resources/css/tails.css" rel="stylesheet" />
+    <h:outputScript library="js" name="functions.js"/>
 </h:head>
 <h:body>
     <div class="w-full h-full relative">
-        <h:form id="registerform">
+        <h:form id="registerform" enctype="multipart/form-data">
             <div class="w-[40%] mx-auto mt-5 rounded-lg mb-5 shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                 <div class="mb-3">
                     <p class="text-5xl text-white font-bold text-center p-2">
@@ -36,8 +35,7 @@
                         <label for="surname" class="block text-white font-bold">Surname
                         </label>
                         <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="surname"
-                            validatorMessage="Surname should not exceed 30 characters"
-                            value="#{userData.surName}">
+                            validatorMessage="Surname should not exceed 30 characters" value="#{userData.surName}">
                             <f:validateLength maximum="30" />
                         </h:inputText>
                         <h:message for="surname" class="text-white text-sm relative top-[-5px]" />
@@ -55,30 +53,39 @@
 
                     <h:panelGroup id="titlediv">
                         <h:panelGroup class="text-red-700 mt-3" rendered="#{userData.type eq 'teacher'}">
-                        <label for="title" class="block text-white font-bold">Academic Title
-                        </label>
-                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="title"
-                            value="#{userData.title}" />
-                    </h:panelGroup>
+                            <label for="title" class="block text-white font-bold">Academic Title
+                            </label>
+                            <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
+                                id="title" value="#{userData.title}" />
+                        </h:panelGroup>
                     </h:panelGroup>
 
                     <h:panelGroup id="yeardiv">
                         <h:panelGroup class="text-red-700 mt-3" rendered="#{userData.type eq 'student'}">
-                        <label for="year" class="block text-white font-bold">Year
-                        </label>
-                        <h:selectOneMenu class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
-                            id="year" value="#{userData.year}">
-                            <f:selectItems value="#{globalConfig.years}" var="item" />
-                        </h:selectOneMenu>
-                    </h:panelGroup>
+                            <label for="year" class="block text-white font-bold">Year
+                            </label>
+                            <h:selectOneMenu class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
+                                id="year" value="#{userData.year}">
+                                <f:selectItems value="#{globalConfig.years}" var="item" />
+                            </h:selectOneMenu>
+                        </h:panelGroup>
+
+                        <h:panelGroup class="text-red-700 mt-3" rendered="#{userData.type eq 'student'}">
+                            <label for="faculty" class="block text-white font-bold">Faculty
+                            </label>
+                            <h:selectOneMenu class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
+                                id="faculty" value="#{userData.faculty}">
+                                <f:selectItems value="#{globalConfig.faculties}" var="item" />
+                            </h:selectOneMenu>
+                        </h:panelGroup>
                     </h:panelGroup>
 
                     <div class="text-red-700 mt-3">
                         <label for="birthdate" class="block text-white font-bold">Birthdate
                         </label>
                         <h:inputText p:type="date" class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
-                                     id="birthdate" value="#{userData.birthDate}" p:max="#{localConfig.minDate}">
-                            <f:convertDateTime pattern="yyyy-MM-dd"/>
+                            id="birthdate" value="#{userData.birthDate}" p:max="#{localConfig.minDate}">
+                            <f:convertDateTime pattern="yyyy-MM-dd" />
                         </h:inputText>
                         <h:message for="birthdate" class="text-white text-sm relative top-[-5px]" />
                     </div>
@@ -92,6 +99,13 @@
                         </h:selectOneMenu>
                     </div>
 
+                    <div class="text-red-700 mt-3">
+                        <h:inputFile value="#{userData.picture}" class="hidden" id="picture"/>
+                        <p><button type="button" class="text-white font-bold" onclick="showUpload()">+ Add Profile picture</button>
+                            <img src="/resources/images/ishimwe.JPG" class="ml-5 inline w-10 h-10"/>
+                        </p>
+                    </div>
+
 
                     <div class="text-red-700 relative mt-3">
                         <label for="newpassword" class="block text-white font-bold">Password
@@ -100,28 +114,31 @@
                             id="newpassword"
                             validatorMessage="Password should be more than 6 characters and include a number"
                             value="#{userData.newPassword}">
-                            <f:validateRegex pattern="(?=.*\d)(?=.*[a-zA-Z])\w{6,}"/>
+                            <f:validateRegex pattern="(?=.*\d)(?=.*[a-zA-Z])\w{6,}" />
                             <f:ajax render="newpasswordmessage confpasswordmessage" />
                         </h:inputSecret>
-                        <h:message id="newpasswordmessage" for="newpassword" class="text-white text-sm relative top-[-5px]" />
+                        <h:message id="newpasswordmessage" for="newpassword"
+                            class="text-white text-sm relative top-[-5px]" />
                     </div>
 
-                    
+
 
                     <div class="text-red-700 relative mt-3">
                         <label for="confpassword" class="block text-white font-bold">Confirm Password
                         </label>
                         <h:inputSecret class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
-                                       id="confpassword" value="#{userData.confPassword}" validator="#{validators.validatePasswordConfirmation}">
+                            id="confpassword" value="#{userData.confPassword}"
+                            validator="#{validators.validatePasswordConfirmation}">
                             <f:ajax render="confpasswordmessage" />
                         </h:inputSecret>
-                        <h:message id="confpasswordmessage" for="confpassword" class="text-white text-sm relative top-[-5px]" />
+                        <h:message id="confpasswordmessage" for="confpassword"
+                            class="text-white text-sm relative top-[-5px]" />
                     </div>
 
                     <div>
                         <div class="float-left text-red-800">
                             <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
-                            <h:link outcome="/account/login" value="Login" class="text-white underline"/>
+                            <h:link outcome="/account/login" value="Login" class="text-white underline" />
                         </div>
                         <div class="float-right">
                             <h:commandLink value="Register" action="#{userData.register}"
