--- a/web/teacher/quizzes.xhtml
+++ b/web/teacher/quizzes.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:head>
-    <title>Facelet Title</title>
+    <title>Quizzes - Course</title>
 </h:head>
 <h:body>
     <ui:composition template="common.xhtml">
