--- a/web/student/common.xhtml
+++ b/web/student/common.xhtml
@@ -36,8 +36,8 @@
             <a class="text-blue-800 text-2xl underline block" href="home.xhtml">Home</a>
             <a class="text-blue-800 text-2xl block" href="announcement.xhtml">Announcements</a>
             <a class="text-blue-800 text-2xl block" href="inbox.xhtml">Messages</a>
-            <a class="text-blue-800 text-2xl block">Grades</a>
-            <a class="text-blue-800 text-2xl block">Quizzes</a>
+            <a class="text-blue-800 text-2xl block" href="grades.xhtml">Grades</a>
+            <a class="text-blue-800 text-2xl block" href="quizz.xhtml">Quizzes</a>
             <a class="text-blue-800 text-2xl block">Online Lesson</a>
         </div>
     </div>
