added new course dialog

--- a/web/student/index.xhtml
+++ b/web/student/index.xhtml
@@ -23,6 +23,7 @@
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
         <h:outputStylesheet library="css" name="tails.css" />
+        <h:outputStylesheet library="css" name="navbar.css" />
 
 
 
