--- a/web/student/account.xhtml
+++ b/web/student/account.xhtml
@@ -36,7 +36,7 @@
             </ui:define>
 
             <ui:define name="title">
-                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Leon Emmanuel ISHIMWE</h1>
+                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">#{sessionData.user.fullname}</h1>
             </ui:define>
             <hr />
 
@@ -52,13 +52,13 @@
                                              class="imgInfo" alt="" />
                                     </div>
                                     <div class="col-md-10">
-                                        <h4 class=" yourName">JOHN WEZA PETTERSON MOHAMMAD'S SETTINGS</h4>
+                                        <h4 class=" yourName">#{sessionData.user.fullname}'S SETTINGS</h4>
                                         <br />
                                         <br />
 
-                                        <p><span>Fullname: </span> JOHN WEZA PETTERSON MOHAMMAD</p>
-                                        <p><span>Display name: </span> JOHN WEZA PETTERSON MOHAMMAD</p>
-                                        <p><span>Email: </span> johnmohammad@gmail.com</p>
+                                        <p><span>Fullname: </span> #{sessionData.user.fullname}</p>
+                                        <p><span>Display name: </span> #{sessionData.user.fullname}</p>
+                                        <p><span>Email: </span> #{sessionData.user.email}</p>
                                         <br />
                                         <br />
 
