--- a/web/teacher/course.xhtml
+++ b/web/teacher/course.xhtml
@@ -13,8 +13,7 @@
             <h:form class="mt-12 w-[75%]">
                 <div class="mb-3">
                     <label for="courseName" class="form-label">Course name</label>
-                    <h:inputText class="form-control" id="coursename" />
-                    <!--div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div-->
+                    <h:inputText class="form-control" id="coursename" value="#{courseBean.name}"/>
                 </div>
 
 
@@ -22,7 +21,7 @@
                 <div class=" row smInput">
                     <div class="col-md-6 md-3">
                         <label for="shortName" class="form-label">Course Short name</label>
-                        <h:inputText class="form-control" id="shortName" />
+                        <h:inputText class="form-control" id="shortName" value="#{courseBean.shortName}"/>
                     </div>
                 </div>
 
@@ -34,7 +33,7 @@
                         <label for="year" class="block font-bold">Year
                         </label>
                         <h:selectOneMenu class="form-select form-select-mb"
-                                         id="year">
+                                         id="year" value="#{courseBean.sinif}">
                             <f:selectItems value="#{globalConfig.years}" var="item" />
                         </h:selectOneMenu>
                     </div>
@@ -45,7 +44,7 @@
                         <label for="faculty" class="block font-bold">Faculty
                         </label>
                         <h:selectOneMenu class="form-select form-select-mb"
-                                         id="faculty">
+                                         id="faculty" value="#{courseBean.faculty}">
                             <f:selectItems value="#{globalConfig.faculties}" var="item" />
                         </h:selectOneMenu>
                     </div>
@@ -53,18 +52,20 @@
 
                 <div class="md-3">
                     <label for="description" class="form-label">Description</label>
-                    <h:inputTextarea class="form-control" id="description" />
+                    <h:inputTextarea class="form-control" id="description" value="#{courseBean.description}"/>
                 </div>
                 <div class="md-3">
-                    <label for="Requirement" class="form-label"> Requirement</label>
-                    <h:inputTextarea class="form-control" id="Requirement" />
+                    <label for="Requirement" class="form-label"> Requirements</label>
+                    <h:inputTextarea class="form-control" id="Requirement" value="#{courseBean.requirements}"/>
                 </div>
 
 
                 <br />
 
                 <div class="flex flex-row text-2xl justify-between">
-                <button type="submit" class="bg-red-600 text-white w-[48%] p-2 rounded-lg">Submit</button>
+                    <h:commandButton type="button" class="bg-red-600 text-white w-[48%] p-2 rounded-lg" value="Submit">
+                        <f:ajax listener="#{courseBean.register}"/>
+                    </h:commandButton>
                 <button type="button" class="bg-red-600 text-white w-[48%] p-2 rounded-lg" onclick="hideNewCourse()">Cancel</button>
                 </div>
             </h:form>
