accept/deny students

--- a/web/teacher/people.xhtml
+++ b/web/teacher/people.xhtml
@@ -18,7 +18,7 @@
                 <div class="row">
 
                     <div class="col-md-9">
-                        <table>
+                        <table class="table">
 
                             <tr>
                                 <th></th>
@@ -165,11 +165,6 @@
 
         <ui:define name="style">
             <style>
-                header {
-                    padding-top: 20px;
-
-                }
-
                 table {
                     font-family: arial, sans-serif;
                     border-collapse: collapse;
