added allow students

--- a/web/teacher/index.xhtml
+++ b/web/teacher/index.xhtml
@@ -50,7 +50,7 @@
                     <div class="col-md-3">
 
                         <p><button type="button" class="btn btn-lg button" onclick="showNewCourse()">New course</button></p>
-                        <p><button type="button" class="btn btn-lg button">Accept/deny students</button></p>
+                        <p><button type="button" class="btn btn-lg button" onclick="showAllowStudents()">Accept/deny students</button></p>
                     </div>
 
                 </div>
